tests/rosetta/transpiler/FS/first-class-functions-use-numbers-analogously.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/first-class-functions-use-numbers-analogously.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'First-class-functions-use-numbers-analogously' based on the file name 'first-class-functions-use-numbers-analogously.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/first-class-functions-use-numbers-analogously.fs(47,49): error FS0001: This expression was expected to have type
    float -> float array    
but here has type
    'a []    

/workspace/mochi/tests/rosetta/transpiler/FS/first-class-functions-use-numbers-analogously.fs(50,20): error FS0001: This expression was expected to have type
    float -> float array    
but here has type
    'a []    

/workspace/mochi/tests/rosetta/transpiler/FS/first-class-functions-use-numbers-analogously.fs(52,19): error FS0693: The type '(float -> float array)' is not a type whose values can be enumerated with this syntax, i.e. is not compatible with either seq<_>, IEnumerable<_> or IEnumerable and does not have a GetEnumerator method
